[gd_scene load_steps=21 format=3 uid="uid://yysy482oswx2"]

[ext_resource type="Script" uid="uid://cgf6c8kvimtxj" path="res://Scripts/Player/player.gd" id="1_uvnfx"]
[ext_resource type="AudioStream" uid="uid://cxdwosoc7fkp3" path="res://Assets/Audio/SFX/footstep.wav" id="2_a3d8c"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_a3d8c"]

[sub_resource type="CapsuleMesh" id="CapsuleMesh_xpcdj"]

[sub_resource type="CylinderShape3D" id="CylinderShape3D_uvnfx"]
height = 19.3767
radius = 1.0

[sub_resource type="CylinderMesh" id="CylinderMesh_uvnfx"]
top_radius = 0.1
bottom_radius = 0.2
height = 0.3

[sub_resource type="Gradient" id="Gradient_uvnfx"]
colors = PackedColorArray(0, 0, 0, 1, 0.297093, 0.297093, 0.297093, 1)

[sub_resource type="FastNoiseLite" id="FastNoiseLite_a3d8c"]
noise_type = 2
cellular_distance_function = 2
cellular_jitter = 0.0
cellular_return_type = 0

[sub_resource type="NoiseTexture2D" id="NoiseTexture2D_xpcdj"]
color_ramp = SubResource("Gradient_uvnfx")
noise = SubResource("FastNoiseLite_a3d8c")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_mtuoh"]
no_depth_test = true
shading_mode = 0
albedo_texture = SubResource("NoiseTexture2D_xpcdj")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_uvnfx"]
no_depth_test = true
shading_mode = 0
albedo_color = Color(0.694121, 0.694121, 0.69412, 1)

[sub_resource type="CylinderMesh" id="CylinderMesh_a3d8c"]
material = SubResource("StandardMaterial3D_uvnfx")
top_radius = 0.2
bottom_radius = 0.2
height = 0.05

[sub_resource type="Animation" id="Animation_htcer"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:fov")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [75.0]
}

[sub_resource type="Animation" id="Animation_mtuoh"]
resource_name = "sprint"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:fov")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(-2, 1),
"update": 0,
"values": [75.0, 85.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_dd0ac"]
_data = {
&"RESET": SubResource("Animation_htcer"),
&"sprint": SubResource("Animation_mtuoh")
}

[sub_resource type="Animation" id="Animation_a3d8c"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Camera:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0.956914, -0.333654)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Camera/SpotLight3D/LightArea:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("CameraAnims/Footsteps:playing")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_xpcdj"]
resource_name = "bob"
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Camera/SpotLight3D/LightArea:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(0.15, -0.05, 0), Vector3(0, 0, 0)]
}

[sub_resource type="Animation" id="Animation_uvnfx"]
resource_name = "view_bob"
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Camera:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector3(0, 0.956914, -0.333654), Vector3(0, 0.8, -0.334), Vector3(0, 0.956914, -0.333654)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CameraAnims/Footsteps:playing")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.4),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_xpcdj"]
_data = {
&"RESET": SubResource("Animation_a3d8c"),
&"bob": SubResource("Animation_xpcdj"),
&"view_bob": SubResource("Animation_uvnfx")
}

[sub_resource type="BoxShape3D" id="BoxShape3D_uvnfx"]
size = Vector3(12, 12, 32)

[node name="Player" type="CharacterBody3D"]
collision_layer = 3
script = ExtResource("1_uvnfx")

[node name="Hitbox" type="CollisionShape3D" parent="."]
shape = SubResource("CapsuleShape3D_a3d8c")
debug_color = Color(1, 1, 1, 0.42)

[node name="VisibleMesh" type="MeshInstance3D" parent="."]
mesh = SubResource("CapsuleMesh_xpcdj")

[node name="Camera" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.956914, -0.333654)

[node name="SpotLight3D" type="SpotLight3D" parent="Camera"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.2, -0.8, -1.5)
light_energy = 10.0
light_cull_mask = 4294967039
shadow_enabled = true
spot_range = 20.0
spot_angle = 26.3341

[node name="LightArea" type="Area3D" parent="Camera/SpotLight3D"]
collision_layer = 4

[node name="CollisionShape3D" type="CollisionShape3D" parent="Camera/SpotLight3D/LightArea"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, -9.39269)
shape = SubResource("CylinderShape3D_uvnfx")
debug_color = Color(1, 1, 1, 0.0313726)

[node name="Flashlight" type="MeshInstance3D" parent="Camera/SpotLight3D/LightArea"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0.391347)
layers = 256
mesh = SubResource("CylinderMesh_uvnfx")
skeleton = NodePath("../..")
surface_material_override/0 = SubResource("StandardMaterial3D_mtuoh")

[node name="FlashlightRim" type="MeshInstance3D" parent="Camera/SpotLight3D/LightArea/Flashlight"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.19304, 1.49012e-08)
layers = 256
mesh = SubResource("CylinderMesh_a3d8c")
skeleton = NodePath("../../..")

[node name="FovAnims" type="AnimationPlayer" parent="Camera"]
libraries = {
&"": SubResource("AnimationLibrary_dd0ac")
}

[node name="CameraAnims" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_xpcdj")
}
speed_scale = 2.0

[node name="Footsteps" type="AudioStreamPlayer" parent="CameraAnims"]
stream = ExtResource("2_a3d8c")
volume_db = -20.0
pitch_scale = 1.2
bus = &"FilteredSFX"

[node name="FlashlightAnims" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_xpcdj")
}

[node name="Loader" type="Area3D" parent="."]
collision_layer = 16
collision_mask = 0

[node name="Hitbox" type="CollisionShape3D" parent="Loader"]
shape = SubResource("BoxShape3D_uvnfx")
debug_color = Color(0, 0.6, 0.701961, 0)
